# agent-skills-demo

./: .env.example  API文档.md  README.md  config.py  main.py  pyproject.toml  requirements.txt  v4：Skills 机制.md  全模态 AI 混合输出系统.md  全模态系统实现分析.md  灵光 Lite版.md  项目分析报告.md
api/: candyjar.py  chat.py
backend/: .env  main.py  requirements.txt  run_user_flow.py  test_debug.py  test_e2e_user_input_flow.py  test_fakes.py  test_flow.py  test_full_flow.py  test_orchestration_layers.py  test_planner_hardening.py  test_production_hardening.py  test_skill_registry_claude_mechanism.py  test_skills.py
backend/agents/: __init__.py  base.py  base_agent.py  chat_agent.py  implementations.py  orchestration_agent.py  orchestrator.py  skill_manager.py
backend/api/: __init__.py  chat.py
backend/capability_orchestration/: __init__.py  base.py  registry.py
backend/config/: config.py
backend/core/: capability_registry.py  chat_orchestrator.py  planner.py  (+7 more)
capability_orchestration/: __init__.py  base.py  capability_orchestrator.py  registry.py
configs/: config.py
core/: executor.py  planner.py  response_renderer.py  telemetry.py
diff_update/: __init__.py  diff_updater.py
docs/: productionization_checklist.md  project_review_2026-03-05.md
intent_parsing/: __init__.py  intent_parser.py
models/: chat.py  database.py  sandbox.py
performance_optimization/: __init__.py  performance_optimizer.py
sandbox_execution/: __init__.py  sandbox_executor.py
services/: llm_service.py
stream_object/: __init__.py  stream_object.py
streaming_rendering/: __init__.py  streaming_renderer.py
(+58 files in other folders)
